# fastapi-sqlalchemy-alembic-mysql

./: .env.sample  README.md  compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/application/dtos/: attendance_dto.py  user_dto.py
backend/app/application/services/: attendance_service.py  user_service.py
backend/app/dependency/: users.py
backend/app/domain/constants/: roles.py
backend/app/domain/entities/: attendance.py  user.py
backend/app/domain/repositories/: attendance_repository.py  user_repository.py
backend/app/domain/value_objects/: attendance_id.py  email.py  enums.py  user_id.py
backend/app/infrastructure/: database.py
backend/app/infrastructure/models/: __init__.py  attendance.py  base_model.py  permission.py  role.py  role_permission.py  user.py  user_contact.py  user_info.py  user_profile.py  user_role.py
backend/app/infrastructure/repositories/: attendance_repository.py  user_repository.py
backend/app/infrastructure/security/: token.py
backend/app/interfaces/api/v1/: api.py
backend/app/interfaces/api/v1/endpoints/: attendances.py  auth.py  initialize.py  users.py
backend/app/interfaces/api/v1/endpoints/users/: api.py  create.py  get.py  get_list.py  remove.py  update.py
backend/app/logs/: .gitkeep  access-20250325.yml
backend/app/middleware/: __init__.py  app_middleware.py  logging_middleware.py
backend/app/utils/: __init__.py  logger.py
backend/migrations/: env.py
backend/migrations/versions/: 01fec6f20988_auto_migration.py  d10a6c24ea47_auto_migration.py  role_migration.py
backend/test/: __init__.py  conftest.py
backend/test/application/: __init__.py  test_user_service.py
backend/test/application/services/: __init__.py  test_user_service.py
backend/test/domain/: __init__.py  test_entities.py  test_value_objects.py
backend/test/infrastructure/: __init__.py
backend/test/infrastructure/repositories/: __init__.py  test_user_repository.py
backend/test/interfaces/: __init__.py
backend/test/interfaces/api/: __init__.py
backend/test/interfaces/api/v1/: __init__.py  test_users.py
backend/test/interfaces/api/v1/endpoints/: __init__.py  test_users.py
backend/test/interfaces/endpoints/: __init__.py
db/: Dockerfile  my.cnf
