[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.12",
    "mysqlclient>=2.2.7",
    "pydantic-settings>=2.8.1",
    "pymysql>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[tool.setuptools]
packages = ["app"]  # alembicはマイグレーションスクリプトなのでパッケージとして含めません

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
